# semirings

./: .coveragerc  .gitignore  DESIGN.md  EXPLORE.md  LICENSE  README.md  TODO.md  pyproject.toml  run-coverage.bash  setup.py
.github/workflows/: ci.yml
experimental/: endomorphism.py  funky.py  pareto.py  powerseries.py  sample_powerseries.py  semilinear.py  uncertainty.py
notebooks/: pareto-vs-convexhull.ipynb
semirings/: __init__.py  bag.py  base.py  boolean.py  convex_hull.py  count.py  cutsets.py  entropy.py  expectation.py  float.py  free.py  fsa.py  graph.py  interval.py  kleene.py  lazysort.py  logval.py  maxplus.py  maxtimes.py  mert.py  minplus.py  mintimes.py  misc.py  pareto.py  regex.py  sample.py  symbolic.py  util.py  vector.py  wfsa.py
semirings/sampling/: eager.py  lazy2.py  swor.py
tests/: test_semirings.py
