[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semirings"
version = "0.3.2"
description = "Semirings are a powerful abstraction for dynamic programming."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Tim Vieira"},
]

urls.Homepage = "https://github.com/timvieira/semirings"
urls.Repository = "https://github.com/timvieira/semirings"

dependencies = [
    "numpy",
    "scipy",
    "arsenal @ git+https://github.com/timvieira/arsenal",
    "wfsa @ git+https://github.com/timvieira/wfsa",
    "fsa @ git+https://github.com/timvieira/fsa",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "graphviz",
]

[tool.setuptools]
packages = ["semirings"]

[tool.ruff.lint]
ignore = ["E701", "E702", "E741"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405", "E402"]
"experimental/*" = ["E402"]
"semirings/misc.py" = ["E402", "E731"]
